[package]
name = "pushrod-chassis"
version = "0.1.0"
authors = ["Ken Suenobu <ksuenobu@fastmail.com>"]
edition = "2018"
description = "Chassis"
license = "Apache-2.0"
readme = "README.md"
repository = "https://www.github.com/KenSuenobu/pushrod-chassis/"
documentation = "http://docs.rs/crate/pushrod-chassis/"
keywords = ["sdl2", "pushrod", "ui", "gui", "builder"]
categories = ["gui", "graphics", "visualization"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "pushrod_chassis"
path = "src/lib.rs"

[dependencies.sdl2]
version = "^0.34"
features = ["ttf", "image", "unsafe_textures"]
